# spsevb

./: .gitignore  Cargo.toml  README.md  requirements.txt
etc/: ChannelMap.txt  ScalerList.txt  ShiftMap.txt
scripts/: ede_cut.json  plotter.py
scripts/evbutils/: __init__.py  cut.py  histogram.py
src/: channel_map.rs  compass_data.rs  compass_file.rs  compass_run.rs  event_builder.rs  main.rs  sps_data.rs
src/evb/: channel_map.rs  compass_data.rs  compass_file.rs  compass_run.rs  error.rs  event_builder.rs  kinematics.rs  mod.rs  nuclear_data.rs  sabre_fields.rs  scaler_list.rs  shift_map.rs  sps_data.rs  used_size.rs
src/ui/: app.rs  file_dialog.rs  mod.rs  ws.rs
