[package]
name = "spsevb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
eframe = "0.20.1"
flate2 = "1.0.25"
log = "0.4.17"
nom = "7.1.2"
polars = { version = "0.26.1", features = ["parquet", "lazy"] }
rand = "0.8.5"
simplelog = "0.12.0"
tar = "0.4.38"
